[package]
name = "tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [ "section1/authentication","section1/hello_world", "section1/login", "section1/login_manager", "section1/variables", "section2/divide_work", "section2/footgun", "section2/hello", "section2/mutexes", "section2/scoped_thread", "section2/thread_builder"]
